--- a/Views/PTB2/Index.cshtml
+++ b/Views/PTB2/Index.cshtml
@@ -9,7 +9,7 @@
         <label> He so C:</label>
         <input type="text" name="soC">
         
-        <button type="submit" value="Tinh "></button>
+        <button type="submit" value="Tinh ">Tính </button>
     </p>
     <h2>@ViewBag.mess</h2>
 </form>
