--- a/Views/Demo/Index.cshtml
+++ b/Views/Demo/Index.cshtml
@@ -5,7 +5,7 @@
 
         <label> He so B:</label>
         <input type="text" name="HesoB">
-        <button type="submit" value="Tinh "></button>
+        <button type="submit" value="Tinh ">giải phương trình</button>
     </p>
     <h2>@ViewBag.mess1</h2>
 </form>
